# x86_architecture

./: .gitignore  Cargo.toml
src/: casm-c-sample.rs  emulator.rs  emulator_function.rs  instruction.rs  lib.rs  main.rs  modrm.rs
