[package]
name = "x86_architecture"
version = "0.1.0"
authors = ["Koichi <kuinniuk1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
num-traits = "0.2"
num-derive = "0.2"
num = "0.2.1"